--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       background: rgba(255, 255, 255, 1);
       transform: scale(1.05);
     }
-    /* Container for video */
+    /* Video Container */
     #container {
       position: relative;
       margin: 0 auto 20px auto;
@@ -101,18 +101,37 @@
       height: 100%;
       object-fit: cover;
     }
+    /* Footer OnlyFans Button */
+    #footer {
+      margin-top: 20px;
+    }
+    .onlyfans-btn {
+      display: inline-block;
+      text-decoration: none;
+      padding: 15px 25px;
+      background: #ff4081;
+      color: white;
+      font-size: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, background 0.3s;
+    }
+    .onlyfans-btn:hover {
+      background: #ff1e7d;
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
-  <!-- Contract Address Container -->
+  <!-- Contract Address -->
   <div id="contractAddress">
     Contract Address: coming soon
   </div>
   <br>
-  <!-- Header with toggle button -->
+  <!-- Header with Toggle Button -->
   <header id="bagToggle">Use the bag</header>
 
-  <!-- Video container -->
+  <!-- Video Container -->
   <div id="container">
     <video id="video" autoplay loop muted>
       <source src="1.mp4" type="video/mp4">
@@ -144,6 +163,11 @@
     <div class="thumb" data-video="7.mp4">
       <video src="7.mp4" muted loop></video>
     </div>
+  </div>
+  
+  <!-- Footer with OnlyFans Button -->
+  <div id="footer">
+    <a href="https://onlyfans.com/lilcindybaby" target="_blank" class="onlyfans-btn">Cindy OF</a>
   </div>
 
   <!-- Load MediaPipe Face Mesh and Drawing Utilities -->
