--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- Meta viewport to control scaling on mobile devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Use the Bag</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
   <style>
@@ -49,7 +51,7 @@
       background: rgba(255, 255, 255, 1);
       transform: scale(1.05);
     }
-    /* Container with max-width reduced to 500px and extra bottom margin */
+    /* Video Container */
     #container {
       position: relative;
       margin: 0 auto 20px auto;
@@ -119,6 +121,23 @@
     .onlyfans-btn:hover {
       background: #ff1e7d;
       transform: scale(1.05);
+    }
+    /* Media Queries for Mobile */
+    @media (max-width: 600px) {
+      #container {
+        max-width: 90vw;
+      }
+      #gallery {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        gap: 10px;
+        padding: 0 10px;
+      }
+      .thumb {
+        flex: 0 0 auto;
+        width: 40vw;
+        height: auto;
+      }
     }
   </style>
 </head>
