--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- Meta viewport to control scaling on mobile devices -->
+  <!-- Ensure proper scaling on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Use the Bag</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
@@ -122,7 +122,7 @@
       background: #ff1e7d;
       transform: scale(1.05);
     }
-    /* Media Queries for Mobile */
+    /* Mobile adjustments */
     @media (max-width: 600px) {
       #container {
         max-width: 90vw;
