--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       padding: 20px;
       padding-bottom: 40px; /* extra bottom padding */
     }
+    /* Mobile container to wrap all content */
+    #mobileContainer {
+      /* On larger screens, this can simply wrap content normally */
+    }
     /* Contract Address Container */
     #contractAddress {
       background: rgba(255, 255, 255, 0.9);
@@ -62,7 +66,7 @@
       overflow: hidden;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     }
-    video {
+    #container video {
       width: 100%;
       height: auto;
       display: block;
@@ -102,8 +106,10 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      /* Static preview: load metadata only so it shows one frame */
+      /* For gallery, load a static preview frame */
       preload: metadata;
+      playsinline;
+      webkit-playsinline;
     }
     /* Footer OnlyFans Button */
     #footer {
@@ -126,14 +132,35 @@
     }
     /* Mobile adjustments */
     @media (max-width: 600px) {
+      /* Wrap all content in a container that fills the viewport */
+      #mobileContainer {
+        height: 100vh;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+      }
+      /* Let the top sections take minimal space */
+      #contractAddress,
+      header,
+      #gallery,
+      #footer {
+        flex: 0 1 auto;
+      }
+      /* The video container will expand to fill remaining space */
       #container {
+        flex: 1 1 auto;
         max-width: 90vw;
       }
-      /* Let gallery thumbnails wrap naturally */
+      /* Disable interactions on the main video */
+      #container video {
+        pointer-events: none;
+      }
+      /* Adjust gallery thumbnails */
       #gallery {
         flex-wrap: wrap;
         justify-content: center;
         gap: 10px;
+        padding: 0 10px;
       }
       .thumb {
         width: 40vw;
@@ -143,52 +170,53 @@
   </style>
 </head>
 <body>
-  <!-- Contract Address -->
-  <div id="contractAddress">
-    Contract Address: coming soon
-  </div>
-  <br>
-  <!-- Header with Toggle Button -->
-  <header id="bagToggle">Remove the bag</header>
+  <div id="mobileContainer">
+    <!-- Contract Address -->
+    <div id="contractAddress">
+      Contract Address: coming soon
+    </div>
+    <br>
+    <!-- Header with Toggle Button -->
+    <header id="bagToggle">Remove the bag</header>
 
-  <!-- Video Container -->
-  <div id="container">
-    <video id="video" autoplay loop muted>
-      <source src="1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <canvas id="overlayCanvas"></canvas>
-  </div>
+    <!-- Video Container -->
+    <div id="container">
+      <video id="video" autoplay loop muted playsinline webkit-playsinline disablePictureInPicture>
+        <source src="1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <canvas id="overlayCanvas"></canvas>
+    </div>
 
-  <!-- Video Gallery -->
-  <div id="gallery">
-    <div class="thumb active" data-video="1.mp4">
-      <!-- Static preview: remove autoplay and loop -->
-      <video src="1.mp4" muted preload="metadata"></video>
+    <!-- Video Gallery -->
+    <div id="gallery">
+      <div class="thumb active" data-video="1.mp4">
+        <video src="1.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
+      <div class="thumb" data-video="2.mp4">
+        <video src="2.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
+      <div class="thumb" data-video="3.mp4">
+        <video src="3.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
+      <div class="thumb" data-video="4.mp4">
+        <video src="4.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
+      <div class="thumb" data-video="5.mp4">
+        <video src="5.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
+      <div class="thumb" data-video="6.mp4">
+        <video src="6.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
+      <div class="thumb" data-video="7.mp4">
+        <video src="7.mp4" muted preload="metadata" playsinline webkit-playsinline></video>
+      </div>
     </div>
-    <div class="thumb" data-video="2.mp4">
-      <video src="2.mp4" muted preload="metadata"></video>
+    
+    <!-- Footer with OnlyFans Button -->
+    <div id="footer">
+      <a href="https://onlyfans.com/lilcindybaby" target="_blank" class="onlyfans-btn">Cindy OF</a>
     </div>
-    <div class="thumb" data-video="3.mp4">
-      <video src="3.mp4" muted preload="metadata"></video>
-    </div>
-    <div class="thumb" data-video="4.mp4">
-      <video src="4.mp4" muted preload="metadata"></video>
-    </div>
-    <div class="thumb" data-video="5.mp4">
-      <video src="5.mp4" muted preload="metadata"></video>
-    </div>
-    <div class="thumb" data-video="6.mp4">
-      <video src="6.mp4" muted preload="metadata"></video>
-    </div>
-    <div class="thumb" data-video="7.mp4">
-      <video src="7.mp4" muted preload="metadata"></video>
-    </div>
-  </div>
-  
-  <!-- Footer with OnlyFans Button -->
-  <div id="footer">
-    <a href="https://onlyfans.com/lilcindybaby" target="_blank" class="onlyfans-btn">Cindy OF</a>
   </div>
 
   <!-- Load MediaPipe Face Mesh and Drawing Utilities -->
