--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <!-- Ensure proper scaling on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Use the Bag</title>
+  <title>Click to use the bag</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
   <style>
     /* Ensure full-page gradient */
@@ -152,7 +152,7 @@
   </div>
   <br>
   <!-- Header with Toggle Button -->
-  <header id="bagToggle">Remove the bag</header>
+  <header id="bagToggle">Click to remove the bag</header>
 
   <!-- Video Container -->
   <div id="container">
