--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       // Global toggle for bag overlay (default: true = overlay on).
       let useBag = true;
       function updateHeader() {
-        bagToggle.textContent = useBag ? "Remove the bag" : "Use the bag";
+        bagToggle.textContent = useBag ? "Click to remove the bag" : "Click to use the bag";
       }
       updateHeader();
 
