--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
   <!-- Contract Address -->
   <div id="contractAddress">
-    Contract Address: 7PAKU4iqPophsMpjnC84ZJ75a2heR8WxgvUQydS9pump
+    Contract Address: coming soon
   </div>
   <br>
   <!-- Header with Toggle Button -->
