--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
   <!-- Contract Address -->
   <div id="contractAddress">
-    Contract Address: coming soon
+    Contract Address: 6sDRQUno2F3V5uq8mGu1hD4tyofZGspb875dzqi3pump
   </div>
   <br>
   <!-- Header with Toggle Button -->
