--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       // Copy Contract Address
       copyButton.addEventListener('click', () => {
         const addressToCopy = addressValueSpan.textContent;
-        if (!addressToCopy || addressToCopy === 'YOUR_ADDRESS_HERE') {
+        if (!addressToCopy || addressToCopy === 'coming soon') {
             alert('Address not set.'); // Prevent copying placeholder
             return;
         }
