--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 <body>
 
   <!-- ADDED: Top Heading -->
-  <h1 class="top-heading">Here Me Out</h1>
+  <h1 class="top-heading">Here Me Out Community</h1>
 
   <!-- Contract Address -->
   <div id="contractAddressContainer">
-    Contract Address: <span id="addressValue">coming soon</span>
+    Contract Address: <span id="addressValue">6WaHwtqd2joyr6WHUgG8PAyX5PQosj113HapGjVYpump</span>
     <button id="copyButton" title="Copy Address">Copy</button>
   </div>
   <br>
