--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   <!-- Contract Address -->
   <div id="contractAddressContainer">
-    Contract Address: <span id="addressValue"></span>
+    Contract Address: <span id="addressValue">8mserbgXEAn9eRdXuf2nfEeiEvRoCAWC3CvhCSeKpump</span>
     <button id="copyButton" title="Copy Address">Copy</button>
   </div>
   <br>
