--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 <body>
 
   <!-- ADDED: Top Heading -->
-  <h1 class="top-heading">Here Me Out Community</h1>
+  <h1 class="top-heading">I'm Down</h1>
 
   <!-- Contract Address -->
   <div id="contractAddressContainer">
-    Contract Address: <span id="addressValue">8mserbgXEAn9eRdXuf2nfEeiEvRoCAWC3CvhCSeKpump</span>
+    Contract Address: <span id="addressValue"></span>
     <button id="copyButton" title="Copy Address">Copy</button>
   </div>
   <br>
