--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 <body>
 
   <!-- ADDED: Top Heading -->
-  <h1 class="top-heading">I'm Down</h1>
+  <h1 class="top-heading">Down Bad</h1>
 
   <!-- Contract Address -->
   <div id="contractAddressContainer">
