--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     body {
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+      background: linear-gradient(135deg, #7492eb, #ACB6E5);
       color: #333;
       text-align: center;
       padding: 20px;
